--- a/Web/frontend/events.html
+++ b/Web/frontend/events.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- Sidebar Navigation -->
     <nav class="sidebar">
         <div class="sidebar-header">
             <svg class="logo-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -57,7 +56,6 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
     <main class="main-content">
         <header class="page-header">
             <h1>Реестр событий</h1>
@@ -66,7 +64,6 @@
             </div>
         </header>
 
-        <!-- Search & Filters -->
         <div class="events-header">
             <div class="search-box">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -91,7 +88,6 @@
             </div>
         </div>
 
-        <!-- Events Table -->
         <div class="events-card">
             <div class="events-table-container">
                 <table class="events-table">
@@ -111,7 +107,6 @@
                 </table>
             </div>
             
-            <!-- Pagination -->
             <div class="pagination">
                 <div class="pagination-info" id="paginationInfo">
                     Показано 0-0 из 0
@@ -134,7 +129,6 @@
         </div>
     </main>
 
-    <!-- Event Detail Modal -->
     <div class="modal-overlay" id="eventModal">
         <div class="modal">
             <div class="modal-header">
@@ -154,8 +148,8 @@
         </div>
     </div>
 
-    <script src="js/api.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/events.js"></script>
+    <script src="js/api.js?v=2"></script>
+    <script src="js/auth.js?v=2"></script>
+    <script src="js/events.js?v=2"></script>
 </body>
 </html>
