--- a/Web/frontend/login.html
+++ b/Web/frontend/login.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <div class="login-container">
-        <!-- Background Watermark Icon -->
         <div class="bg-watermark">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1">
                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
@@ -72,6 +71,24 @@
             </form>
         </div>
     </div>
+    <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            const errorEl = document.getElementById('loginError');
+            
+            errorEl.style.display = 'none';
+            
+            const success = await Auth.login(username, password);
+            if (success) {
+                window.location.href = 'index.html';
+            } else {
+                errorEl.style.display = 'block';
+            }
+        });
+    </script>
 </body>
 </html>
