пофикшен поиск по regex и убрана бесконечная загрузка если запрос уже был выполнен

--- a/Web/frontend/events.html
+++ b/Web/frontend/events.html
@@ -148,6 +148,8 @@
                     <div class="spinner"></div>
                     <span>Загрузка...</span>
                 </div>
+                <!-- Невидимый элемент для отслеживания прокрутки -->
+                <div id="scrollSentinel" style="height: 20px; width: 100%;"></div>
             </div>
             
             <div class="pagination" id="paginationContainer">
