--- a/Web/frontend/index.html
+++ b/Web/frontend/index.html
@@ -66,7 +66,7 @@
 
     <main class="main-content">
         <header class="page-header">
-            <h1>Дашборд аналитики</h1>
+            <h1>Дашборд аналитики <span style="font-size: 0.6em; opacity: 0.7; font-weight: normal;">(24 часа)</span></h1>
             <div class="header-info">
                 <span class="last-update" id="lastUpdate">Обновление: --:--</span>
                 <span class="update-indicator" id="updateIndicator"></span>
